box model of website styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 </head>
 
 <body>
-    <div>
+    <div class="top-container">
         <h1>I'm Mehran</h1>
-        <p>a programmer</p>
+        <p>a programmer.</p>
+    </div>
+    <div class="middle-container">
+
+    </div>
+    <div class="bottom-container">
+
     </div>
 
 
