--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 <body>
     <div class="top-container">
+        <img src="images/cloud01.JPG" alt="cloud">
         <h1>I'm Mehran</h1>
         <p>a programmer.</p>
+        <img src="images/cloud01.JPG" alt="cloud">
+        <img src="images/mountain01.jpg" alt="mountain">
     </div>
     <div class="middle-container">
 
