--- a/index.html
+++ b/index.html
@@ -8,24 +8,59 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="top-container">
         <img class="top-cloud" src="images/cloud01.JPG" alt="cloud">
         <h1>I'm Mehran</h1>
-        <p>a programmer.</p>
+        <h2>a programmer.</h2>
         <img class="bottom-cloud" src="images/cloud01.JPG" alt="cloud">
         <img src="images/mountain01.jpg" alt="mountain">
     </div>
     <div class="middle-container">
+        <div class="profile">
+            <img src="https://www.flaticon.com/svg/vstatic/svg/4341/4341613.svg?token=exp=1619350509~hmac=8f10c92eeecc3cd1b32da128058a9cc3"
+                alt="">
+            <h2>Hi</h2>
+            <p>The dove family ought to have become extinct ages ago, if all that orthodox zoologists tell us about the
+                fierce struggle for existence be true. </p>
 
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My skills</h2>
+            <div class="skills-now">
+                <img src="https://www.flaticon.com/svg/vstatic/svg/4341/4341713.svg?token=exp=1619350745~hmac=ed6440dbb86487f7061261dc82439bb3"
+                    alt="">
+                <h3>Web</h3>
+                <p>It is common in some dry, well-cultivated districts, like Etawah, where there are plenty of old mango
+                    groves.</p>
+
+
+            </div>
+
+        </div>
+        <hr>
+        <div class="contact me">
+
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
     </div>
+
+
     <div class="bottom-container">
-
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© 2021 MehrBarz.</p>
     </div>
-
 
 </body>
 
