css float and clear

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img src="https://www.flaticon.com/svg/vstatic/svg/4341/4341613.svg?token=exp=1619350509~hmac=8f10c92eeecc3cd1b32da128058a9cc3"
+            <img src="images/circle-cropped.png"
                 alt="">
             <h2>Hi</h2>
             <p>The dove family ought to have become extinct ages ago, if all that orthodox zoologists tell us about the
@@ -33,23 +33,26 @@
         <hr>
         <div class="skills">
             <h2>My skills</h2>
-            <div class="skills-now">
-                <img src="https://www.flaticon.com/svg/vstatic/svg/4341/4341713.svg?token=exp=1619350745~hmac=ed6440dbb86487f7061261dc82439bb3"
+            <div class="skill-row">
+                <img class="skill01" src="images/skill01.png"
                     alt="">
                 <h3>Web</h3>
-                <p>It is common in some dry, well-cultivated districts, like Etawah, where there are plenty of old mango
+                <p class="skill-description">It is common in some dry, well-cultivated districts, like Etawah, where there are plenty of old mango
                     groves.</p>
-
-
             </div>
+            <div class="skill-row">
+                <img class="skill02" src="images/skill02.png" alt="">
+                <h3>Python</h3>
+                <p class="skill02-description">Development.</p>
+              </div>
 
         </div>
         <hr>
         <div class="contact me">
 
             <h2>Get In Touch</h2>
-            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <h3>Feel free to send an email</h3>
+            <p>Or add me on social media.</p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
     </div>
@@ -60,6 +63,7 @@
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
         <p>© 2021 MehrBarz.</p>
+        
     </div>
 
 </body>
