--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <img class="skill01" src="images/skill01.png"
                     alt="">
                 <h3>Web</h3>
-                <p class="skill-description">It is common in some dry, well-cultivated districts, like Etawah, where there are plenty of old mango
+                <p class="skill01-description">It is common in some dry, well-cultivated districts, like Etawah, where there are plenty of old mango
                     groves.</p>
             </div>
             <div class="skill-row">
                 <img class="skill02" src="images/skill02.png" alt="">
-                <h3>Python</h3>
-                <p class="skill02-description">Development.</p>
+                <h3>Flutter- Dart</h3>
+                <p class="skill02-description">If you connect the Nows of the present on both the earth and Rihlon, you have a straight line, perpendicular to the parallel time lines of both the earth and Rihlon.</p>
               </div>
 
         </div>
@@ -61,7 +61,7 @@
     <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://www.mehrbarz.wordpress.com/">Website</a>
         <p>© 2021 MehrBarz.</p>
         
     </div>
