--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="images/circle-cropped.png"
                 alt="">
             <h2>Hi</h2>
-            <p>The dove family ought to have become extinct ages ago, if all that orthodox zoologists tell us about the
+            <p class="intro">The dove family ought to have become extinct ages ago, if all that orthodox zoologists tell us about the
                 fierce struggle for existence be true. </p>
 
         </div>
@@ -52,7 +52,7 @@
 
             <h2>Get In Touch</h2>
             <h3>Feel free to send an email</h3>
-            <p>Or add me on social media.</p>
+            <p class="contact-message">Or add me on social media.</p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
     </div>
@@ -62,7 +62,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.mehrbarz.wordpress.com/">Website</a>
-        <p>© 2021 MehrBarz.</p>
+        <p class="copyright">© 2021 MehrBarz.</p>
         
     </div>
 
